[gd_scene load_steps=4 format=3 uid="uid://dr31adbbmrww0"]

[ext_resource type="PackedScene" uid="uid://bejx6kj0p5det" path="res://UI/Card/Card.tscn" id="1"]
[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://derjoygaeaaeb" path="res://Assets/art/background/main-menu.png" id="3"]

[node name="MainMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("2")

[node name="MainMenuBackDrop" type="Sprite2D" parent="."]
position = Vector2(391, 168)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="StartPage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="StartPage"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 59.0
offset_bottom = 131.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Edge of Oblivion"
horizontal_alignment = 1

[node name="MoveWithWASD" type="Label" parent="StartPage"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -141.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
text = "Move with W A S D (SPACE to stand still!)"
horizontal_alignment = 1

[node name="Card" parent="StartPage" instance=ExtResource("1")]
offset_left = 139.0
offset_top = 285.0
offset_right = 259.0
offset_bottom = 485.0
mouse_filter = 2

[node name="Background" parent="StartPage/Card" index="1"]
mouse_filter = 2

[node name="StartingEquipmentLabel" type="Label" parent="StartPage"]
layout_mode = 0
offset_left = 101.0
offset_top = 236.0
offset_right = 295.0
offset_bottom = 262.0
text = "Your starting equipment!"

[node name="MenuContainer" type="VBoxContainer" parent="StartPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -107.5
offset_right = 120.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="StartPage/MenuContainer"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
text = "Play Game"

[node name="CreditsButton" type="Button" parent="StartPage/MenuContainer"]
layout_mode = 2
text = "Credits"

[node name="CreditsPage" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Container" type="VBoxContainer" parent="CreditsPage"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 0
offset_left = 360.0
offset_top = 141.0
offset_right = 720.0
offset_bottom = 465.0

[node name="ReturnToStartPage" type="Button" parent="CreditsPage/Container"]
layout_mode = 2
text = "Return to Start Page"

[node name="ScrollContainer" type="ScrollContainer" parent="CreditsPage/Container"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPage/Container/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credit" type="RichTextLabel" parent="CreditsPage/Container/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Programming
Matthias Harden
Noah Jacobsen

Game Design
Matthias Harden
Noah Jacobsen

Art
Assets licensed by CC 3.0
From creators
lorc
delapouite
skoll
sbed
All assets can be found at
https://game-icons.net/

Music
Chase by Alexander Nakarada | https://www.serpentsoundstudios.com
Music promoted by https://www.chosic.com/free-music/all/
Attribution 4.0 International (CC BY 4.0)
https://creativecommons.org/licenses/by/4.0/

Dragon Castle by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Dragon World by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Durandal by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Hitman by Kevin MacLeod | https://incompetech.com/
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/

Hostiles Inbound by Miguel Johnson | https://soundcloud.com/migueljohnsonmjmusic
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/

The Torch Of Knowledge by Damiano Baldoni | https://soundcloud.com/damiano_baldoni
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 4.0
https://creativecommons.org/licenses/by/4.0/

All Out Attack by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Duel by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Endless Storm by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Glory Eternal by Darren Curtis | https://www.darrencurtismusic.com/
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/

Goddess Of Fate by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

Hydra And Ash by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

The Army of Minotaur by Makai Symphony | https://soundcloud.com/makai-symphony
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY-SA 3.0
https://creativecommons.org/licenses/by-sa/3.0/

The Phantomâ€™s Castle by Darren Curtis | https://www.darrencurtismusic.com/
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/

Fall From Grace by Darren Curtis | https://www.darrencurtismusic.com/
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/

Lurking Evil by Darren Curtis | https://www.darrencurtismusic.com/
Music promoted by https://www.chosic.com/free-music/all/
Creative Commons CC BY 3.0
https://creativecommons.org/licenses/by/3.0/"

[connection signal="pressed" from="StartPage/MenuContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="StartPage/MenuContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CreditsPage/Container/ReturnToStartPage" to="." method="_on_ReturnToStartPage_pressed"]

[editable path="StartPage/Card"]
